- Incremented .so release number (new module 'billow') - Fixed various bugs in src/Makefile and src/Sources:
  Sources:
  - changed VPATH-based source search to explicit source file
    specification.  Keith suggested there might be a name collision
    somewhere otherwise
  - fixed .c extensions -- they now read .cpp to match the file names

  Makefile:
  - now refers to .cpp files when building DEPENDS and OBJECTS.
  - fixed 'make cleanlibs' to also clean up .libs directories in src/model
    and src/module.
  - C and C++ build rules now correctly include $(CPPFLAGS).
  - rule for building .lo (libtool object) files now correctly builds the
    .o file instead (foo.lo happens automatically when foo.o is built).
  - now includes $(DEPENDS) rather than duplicating the string
    substitution.  Oops.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,22 +1,22 @@
-LIBTOOL=`which libtool`
+LIBTOOL=libtool
 
 # defines source files and vpaths
 include Sources
 
-DEPENDS=$(SOURCES:.c=.d)
+DEPENDS=$(SOURCES:.cpp=.d)
 
 # What source objects are we building?
-OBJECTS=$(SOURCES:.c=.o)
+OBJECTS=$(SOURCES:.cpp=.o)
 
 .PHONY: all clean cleandeps cleanobjs cleanlib libnoise libnoise.so libnoise.so.0
 
 # hooks for future makefiles being able to make multiple SOs, or older SOs
 libnoise: libnoise.so libnoise.a libnoise.la
 libnoise.so: libnoise.so.0
-libnoise.so.0: libnoise.so.0.2
+libnoise.so.0: libnoise.so.0.3
 
 # Real build targets
-libnoise.so.0.2: $(OBJECTS)
+libnoise.so.0.3: $(OBJECTS)
 	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -shared -Wl,-soname=libnoise.so.0 -o $@ $(OBJECTS:.o=.lo)
 
 libnoise.a: $(OBJECTS)
@@ -30,9 +30,9 @@ cleandeps:
 cleanobjs:
 	-rm $(OBJECTS)
 	-rm $(OBJECTS:.o=.lo) #clean up after libtool
-	-rm -rf .libs
+	-rm -rf .libs model/.libs module/.libs
 cleanlib:
-	-rm libnoise.so.0.2
+	-rm libnoise.so.0.3
 	-rm libnoise.a
 	-rm libnoise.la
 
@@ -46,11 +46,11 @@ cleanlib:
 
 # C and C++ libtool (rather than raw CXX/CC) use
 %.o %.lo: %.cpp
-	$(LIBTOOL) --mode=compile $(CXX) $(CXXFLAGS) -c $< -o $@
+	$(LIBTOOL) --mode=compile $(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $(@:.lo=.o)
 
 %.o %.lo: %.c
-	$(LIBTOOL) --mode=compile $(CC) $(CFLAGS) -c $< -o $@
+	$(LIBTOOL) --mode=compile $(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $(@:.lo=.o)
 
 # If dependancies have never been built this will produce a horde of
 # "file not found" warnings and *then* build the deps.  Very odd.
-include $(SOURCES:.c=.d)
+include $(DEPENDS)
