--- a/src/win32/noise.rc
+++ b/src/win32/noise.rc
@@ -54,8 +54,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,9,9,1
- PRODUCTVERSION 0,9,9,1
+ FILEVERSION 1,0,0,0
+ PRODUCTVERSION 1,0,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -73,12 +73,12 @@ BEGIN
             VALUE "Comments", "Licensed under the GNU LGPL\0"
             VALUE "CompanyName", "\0"
             VALUE "FileDescription", "Library for generating coherent noise\0"
-            VALUE "FileVersion", "1.0.0 RC1\0"
+            VALUE "FileVersion", "1.0.0\0"
             VALUE "InternalName", "libnoise\0"
-            VALUE "LegalCopyright", "Copyright © 2004, 2006 Jason Bevins\0"
+            VALUE "LegalCopyright", "Copyright © 2004, 2007 Jason Bevins\0"
             VALUE "OriginalFilename", "libnoise.dll\0"
             VALUE "ProductName", "libnoise\0"
-            VALUE "ProductVersion", "1.0.0 RC1\0"
+            VALUE "ProductVersion", "1.0.0\0"
         END
     END
     BLOCK "VarFileInfo"
